<resources>
    <string name="app_name">EasyScreenRecord</string>
    <string name="record_list">Saved list</string>
    <string name="settings">Settings</string>
    <string name="use_cam">Record with Facecam</string>
    <string name="use_mic">Enable Mic</string>
    <string name="record_quality">Recording quality</string>
    <string name="cam_size">Cam size setting</string>
    <string name="record_quality_low">Low quality</string>
    <string name="record_quality_general">General quality</string>
    <string name="service_always_execute">Always run service</string>
    <string name="start_record">Turn on recording button</string>
    <string name="stop_record">Turn off recording button</string>
    <string name="notice">Notice</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="short_seconds">sec</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="video_delete">Delete files</string>
    <string name="video_file_sharing">Sharing video files</string>
    <string name="video_file_sharing_select_app">Please select an app to upload.</string>

    <string name="record_service_info">This service is for recording.</string>
    <string name="record_service_detail_info">Touch the name of the app. You can create or remove buttons for starting recording.</string>
    <string name="record_service_information1">If you expand the notification area, you can use "Record Button Settings".</string>
    <string name="record_service_information2">Please accept the overlay permission for screen recording.</string>
    <string name="record_service_information3">Screen recording can not be done because the overlay permission is rejected.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="recorded">Recorded</string>
    <string name="record">Record</string>

    <string name="info_message1">You need permission settings (storage space, camera, microphone) for recording. Are you sure?</string>
    <string name="info_message2">Minimum playback time</string>
    <string name="info_message3">You need to set the permission to save the recording file. Are you sure?</string>
    <string name="info_message4">You need storage permission to run the app.</string>
    <string name="info_message5">Are you sure you want to delete the file?</string>
    <string name="info_message6">Please try again in a few minutes.</string>
    <string name="info_message7">Already recording.</string>
    <string name="info_message8">Press \"RECORD\" button to record screen.</string>
    <string name="info_message9">Notice</string>
    <string name="info_message10">If you use a mobile network, charges may apply. Please use wifi. Do you still want to run sharing?</string>
    <string name="info_message11">Do not ask me again</string>
</resources>
